module(name = "roo_wifi", version = "1.1.3")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "roo_testing", version = "1.3.4")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

bazel_dep(name = "roo_collections", version = "1.4.3")
bazel_dep(name = "roo_prefs", version = "1.2.9")
